# rusty-ntfy

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  devenv.nix  devenv.yaml  env.sample  example-rusty-ntfy.ini  flake.nix  rusty-ntfy.ini  shell.nix
.github/workflows/: release.yml
docs/: digest-cli-contract.md
nix/: module.nix  package.nix
src/: cli.rs  digest.rs  main.rs  notify.rs  tailscale.rs
