[dependencies]
configparser = "3.1.0"
diesel = {version = "2.3.6", features = ["postgres"]}
local-ip-address = "0.6.10"
once_cell = "1.21.3"
reqwest = "0.13.2"
tailscale-localapi = "0.4.2"
tokio = {version = "1.49.0", features = ["full"]}

[package]
authors = ["Chess Seventh"]
name = "rusty-ntfy"
version = "2.1.0"
edition = "2021"
