[dependencies]
configparser = "3.1.0"
diesel = {version = "2.3.9", features = ["postgres"]}
local-ip-address = "0.6.12"
once_cell = "1.21.4"
reqwest = "0.13.3"
tailscale-localapi = "0.5.0"
tokio = {version = "1.52.3", features = ["full"]}

[package]
authors = ["Chess Seventh"]
name = "rusty-ntfy"
version = "2.3.2"
edition = "2021"
